[gd_scene load_steps=3 format=3 uid="uid://cfudkfs1qrbqx"]

[ext_resource type="Script" path="res://scenes/end_narrative_scene/end_narrative_scene.gd" id="1_gih8o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_itdi3"]
bg_color = Color(0.118582, 0.118581, 0.118581, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.145098, 0.866667, 0.619608, 1)

[node name="EndNarrativeScene" type="Node2D"]
script = ExtResource("1_gih8o")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)

[node name="NarrativeContainer" type="PanelContainer" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_itdi3")

[node name="MarginContainer" type="MarginContainer" parent="Background/NarrativeContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="NarrativeLabel" type="Label" parent="Background/NarrativeContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ui_label_bold"
theme_override_colors/font_color = Color(0.145098, 0.866667, 0.619608, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="NextButton" type="Button" parent="Background"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_left = 839.0
offset_top = 509.0
offset_right = 1039.0
offset_bottom = 559.0
text = "NEXT"
